--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,3 @@
-/* this file is loaded by index.html and styles the page */
-
 * {
   box-sizing: border-box;
 }
@@ -10,13 +8,6 @@ body {
   line-height: 1.5em;
 }
 
-h1 {
-  font-style: italic;
-  color: #373fff;
-  max-width: calc(100% - 5rem);
-  line-height: 1.1;
-}
-
 input {
   border: 1px solid silver;
   display: block;
@@ -24,6 +15,18 @@ input {
   margin-bottom: 10px;
   padding: 5px;
   width: 100%;
+}
+
+#window{
+    max-width: 600px;
+    margin: 30px auto;
+    border: 1px solid #ddd;
+    box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
+    border-radius: 2px;
+}
+
+.emptysquare{
+  
 }
 
 footer {
