--- a/public/style.css
+++ b/public/style.css
@@ -3,8 +3,7 @@
 }
 
 body {
-  font-family: sans-serif;
-  line-height: 1.5em;
+  margin: 0;
 }
 
 input {
@@ -63,6 +62,20 @@ input {
 .emptysquare:hover{
   cursor: pointer;
   border: 5px solid white;
+}
+
+.winning-message{
+  width: 250vh;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  
+  justify-content: center;
+  align-itmes: center;
 }
 
 
