--- a/public/style.css
+++ b/public/style.css
@@ -65,7 +65,8 @@ input {
 }
 
 .winning-message{
-  width: 250vh;
+  display: none;
+  width: 205vh;
   height: 100vh;
   position: fixed;
   top: 0;
@@ -73,9 +74,31 @@ input {
   right: 0;
   bottom 0;
   background-color: rgba(0, 0, 0, 0.8);
-  
   justify-content: center;
-  align-itmes: center;
+  align-items: center;
+  color: white;
+  font-size: 5rem;
+  flex-direction: column;
+}
+
+.winning-message button{
+  font-size: 3rem;
+  background-color: white;
+  border: 1px solid black;
+  padding: .25em .5em;
+  margin-top: 25px;
+  cursor: pointer;
+  width: 40vh;
+}
+
+.winning-message button:hover {
+  background-color: black;
+  color: white;
+  border-color: white;
+}
+
+.winning-message.show {
+  display: flex;
 }
 
 
