--- a/public/style.css
+++ b/public/style.css
@@ -66,8 +66,8 @@ input {
 
 .winning-message{
   display: none;
-  width: 205vh;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   position: fixed;
   top: 0;
   left: 0;
